Added some polish

--- a/BlazorProfile/wwwroot/index.html
+++ b/BlazorProfile/wwwroot/index.html
@@ -16,7 +16,11 @@
 </head>
 
 <body>
-    <div id="app">Loading...</div>
+    <div id="app">
+        <div class="loading">
+            <div class="loading1"></div>
+            <div class="loading2"></div>
+    </div>
 
     <div id="blazor-error-ui">
         An unhandled error has occurred.
